--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
 	<style>
 	.demo-layout-transparent {
-  	background: url('myann.jpg') center / cover;
+  	background: url('') center / cover;
 	}
 	.demo-layout-transparent .mdl-layout__header,
 	.demo-layout-transparent .mdl-layout__drawer-button {
   	/* This background is dark, so we set text to white. Use 87% black instead if
      	your background is light. */
-  	color: white;
+  	color: black;
 	}
 	</style>
 
@@ -42,12 +42,7 @@
       <!-- Title -->
       <span class="mdl-layout-title">Lost Footsteps</span>
       <div class="mdl-layout-spacer"></div>
-       <nav class="mdl-navigation" style=" background-color: rgba(0,0,0,0);">
-        <a class="mdl-navigation__link" href="">Home</a>
-        <a class="mdl-navigation__link" href="https://lostfootsteps.org/en/topics">Explore Through Key Periods</a>
-        <a class="mdl-navigation__link" href="https://lostfootsteps.org/en/timeline">History Timeline</a>
-	<a class="mdl-navigation__link" href="https://lostfootsteps.org/en/about">About this project</a>
-       </nav>
+       
     </div>
   </header>
   <div class="mdl-layout__drawer">
